--- a/bwca.html
+++ b/bwca.html
@@ -47,7 +47,7 @@
             <div class="row header">
                 <div class="col-md-12 col-xs-12">
                         <h1 class="page-header">Canoeing the Boundary Waters</h1>
-                        <p>While I struggled through my <a href="/terrain.html">first attempt</a> at terrain mapping, I was happy with my work. So, I decided to do another terrain map as my final project for my graphic design in cartorgraphy course. At the time of this map's creation, my partner and I had completed three excursions in the Boundary Waters Canoe Area in northern Minnesota. I mapped our trips in hopes that someday the final product would be good enough to hang on a wall in our house.</p>
+                        <p>While I struggled through my <a href="/terrain.html">first attempt</a> at terrain mapping, I was happy with my work. So, I decided to do another terrain map as my final project for my graphic design in cartorgraphy course. At the time of this map's creation, my partner and I had completed three excursions in the Boundary Waters Canoe Area in northern Minnesota. I mapped our trips in hopes that someday the final product would be good enough to hang on a wall in our house.</p> <br>
                         <a href="/work.html">&larr; back to portfolio</a>
                 </div>
             </div>
