--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
-                  <h2><img src="img/GIS.png" alt="Map"> GIS</h2>
+                  <h2><img src="img/GIS.png" alt="Layers"> GIS</h2>
                   <p style="font-family: Dosis;">You can't solve problems unless you are aware of and understand their history and complexities. I love how GIS can expose, evaluate, and solve complex issues. My professional goal is to help uncover social and environmental injustices and communicate them to wider audiences.  </p>
                   <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
               </div>
