--- a/maptiles.html
+++ b/maptiles.html
@@ -49,7 +49,7 @@
                 <div class="col-md-12 col-xs-12">
                         <h1 class="page-header">The Walking Dead map tile</h1>
                         <p>One of my favorite TV shows is The Walking Dead. I wanted this tileset to capture the aesthetic style of the show's opening credits from the yellow, dingy tint to the decay of the humans and the architecture post-zombie apocalypse. </p>
-                        <p><i>Click image to go to actual maptiles.</i></p>
+                        <p><i>Click image to go to actual maptiles.</i></p> <br>
                         <a href="/work.html">&larr; back to portfolio</a>
                 </div>
             </div>
