--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
           </div>
 
           <div class= "row resume-section">
-              <h2 class="resume-title" style="color:#33cc33;"><strong>Technical Skills</strong></h3>
+              <h2 class="header-title">Technical Skills</h2>
               <div class="col-sm-12">
                   <h3>Cartography and GIS</h3>
                   <p> Adobe Illustrator and Photoshop, ArcGIS, QGIS, GeoDa, R, Blender, CartoCSS, MapboxStudio, Microsoft Office</p>
@@ -63,7 +63,7 @@
           </div>
 
           <div class="row resume-section">
-              <h2 class="resume-title" style="color:#33cc33;"><strong>Work Experience</strong></h2>
+              <h2 class="header-title">Work Experience</h2>
               <div class="col-md-12">
                   <h4>Applied Population Lab</h4>
                   <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Intern | <strong>October 2016 &mdash; May 2017</strong> | Madison, WI</h6>
@@ -122,7 +122,7 @@
           </div>
 
           <div class="row resume-section">
-              <h2 class="resume-title" style="color:#33cc33;"><strong>Education</strong></h2>
+              <h2 class="header-title">Education</h2>
               <div class="col-md-12">
                   <h3>University of Wisconsin &mdash; Madison</h3>
                   <h5><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> Certificate in GIS </h5>
@@ -138,7 +138,7 @@
         </div>
 
         <div class="row resume-section">
-            <h2 class="resume-title" style="color:#33cc33;"><strong>Volunteer Experience</strong></h2>
+            <h2 class="header-title">Volunteer Experience</h2>
             <div class="col-md-12">
                 <h4>Goodman Community Center Teen Center</h4>
                 <h6>Mentor/Tutor</h6>
