--- a/work.html
+++ b/work.html
@@ -46,8 +46,7 @@
 			<div class="row header">
 				<div class="col-md-12">
 					<h1 class="page-header">Portfolio</h1>
-                    <h3>My collection of work from cartography and GIS coursework at the University of Wisconsin-Madison.</h3>
-                    <br>
+                    <h4>My collection of work from <a href="#cart">cartography</a> and <a href="#GIS">GIS</a> coursework at the University of Wisconsin-Madison.</h4>
 				</div>
 			</div>
 		</div>
@@ -56,10 +55,12 @@
 <!-- thumbnails start here -->
         <div class="container";>
             <div class="row">
+                <h2 class="header-title" align="center" id="cart"><img src="img/map_graphic.png" alt="Map"> Cartography</h2>
+                <br>
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
                         <a href="unintended_pregnancies.html">
-                            <figure class="img-hover">
+                            <figure class="img-hover" align="center">
                                 <img class="img-hover" src="img/pregnancy_crop.png" alt="The Cost of Unintended Pregnancies in the United States" class="img-responsive"/></figure></a>
                     </div>
                 </div>
@@ -67,7 +68,7 @@
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
                         <a href="terrain_map.html">
-                            <figure class="img-hover">
+                            <figure class="img-hover" align="center">
                                 <img class="img-hover" src="img/terrain_crop.png" alt="Bicycle Race Route in Southeastern Australia" class="img-responsive"/></figure></a>
                     </div>
                 </div>
@@ -75,7 +76,7 @@
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
                         <a href="maptiles.html">
-                            <figure class="img-hover">
+                            <figure class="img-hover" align="center">
                                 <img class="img-hover" src="img/maptiles.png" alt="Walking Dead Maptiles" class="img-responsive"/></figure></a>
                     </div>
                 </div>
@@ -83,7 +84,7 @@
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
                         <a href="bwca.html">
-                            <figure class="img-hover">
+                            <figure class="img-hover" align="center">
                                 <img class="img-hover" src="img/bwca_crop.png" alt="Walking Dead Maptiles" class="img-responsive"/></figure></a>
                     </div>
                 </div>
@@ -91,7 +92,7 @@
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
                         <a href="achievementgap.html">
-                            <figure class="img-hover">
+                            <figure class="img-hover" align="center">
                                 <img class="img-hover" src="img/achievement_crop.png" alt="8th Grade Science Achievement Gap" class="img-responsive"/></figure></a>
                     </div>
                 </div>
@@ -99,7 +100,7 @@
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
                         <a href="campaign_finance.html">
-                            <figure class="img-hover">
+                            <figure class="img-hover" align="center">
                                 <img class="img-hover" src="img/campaign_crop.png" alt="" class="img-responsive"/></figure></a>
                     </div>
                 </div>
@@ -107,11 +108,15 @@
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
                         <a href="UW_incoming.html">
-                            <figure class="img-hover">
+                            <figure class="img-hover" align="center">
                                 <img class="img-hover" src="img/incoming_crop.png" alt="" class="img-responsive"/></figure></a>
                     </div>
                 </div>
 
+            </div>
+            <div class="row">
+                <h2 class="header-title" align="center" id="GIS"><img src="img/GIS.png" alt="Layers"> GIS</h2>
+                <br>
             </div>
         </div>
 
