--- a/unintended_pregnancies.html
+++ b/unintended_pregnancies.html
@@ -47,7 +47,7 @@
             <div class="row header">
                 <div class="col-md-12 col-xs-12">
                         <h1 class="page-header">Costs of Unintended Pregnancies</h1>
-                        <p>This infographic was made in my advanced cartography course. It gives the financial and health costs related to unintended pregnancies in the United States. </p>
+                        <p>This infographic was made in my advanced cartography course. It gives the financial and health costs related to unintended pregnancies in the United States. </p> <br>
                         <a href="/work.html">&larr; back to portfolio</a>
 
                 </div>
