--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
               <div class="col-md-4 col-sm-6 col-xs-12">
                   <h2><img src="img/map_graphic.png" alt="Map"> Cartography</h2>
                   <p style="font-family: Dosis;">As a highly visual learner and an educator, I've been facinated by a map's ability to convey a wealth of information in a concise manner. Cartographers are educators, scientists, and artists. I fully embrace the practice of weaving together science and art through geovisualization and beautiful design.</p>
-                  <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
+                  <p><a class="btn btn-default" href="work.html" role="button">See my work</a></p>
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
                   <h2><img src="img/GIS.png" alt="Layers"> GIS</h2>
                   <p style="font-family: Dosis;">You can't solve problems unless you are aware of and understand their history and complexities. I love how GIS can expose, evaluate, and solve complex issues. My professional goal is to help uncover social and environmental injustices and communicate them to wider audiences.  </p>
-                  <!-- <p><a class="btn btn-default" href="#" role="button">See my work &raquo;</a></p> -->
+                  <p><a class="btn btn-default" href="work.html#GIS" role="button">See my work</a></p>
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
                   <h2><img src="img/telescope.png" alt="Telescope"> Education</h2>
