--- a/work.html
+++ b/work.html
@@ -54,8 +54,8 @@
 
 <!-- thumbnails start here -->
         <div class="container";>
-            <div class="row">
-                <h2 class="header-title" align="center" id="cart"><img src="img/map_graphic.png" alt="Map"> Cartography</h2>
+            <div class="row" id="cart">
+                <h2 class="header-title" align="center"><img src="img/map_graphic.png" alt="Map"> Cartography</h2>
                 <br>
                 <div class="col-md-4">
                     <div class="portfolio-thumbnail">
@@ -116,7 +116,7 @@
             </div>
             <div class="row">
                 <h2 class="header-title" align="center" id="GIS"><img src="img/GIS.png" alt="Layers"> GIS</h2>
-                <br>
+                <p align="center"><i>Coming soon!</i></p>
             </div>
         </div>
 
