--- a/resume.html
+++ b/resume.html
@@ -44,17 +44,17 @@
 
       <div class="container">
           <div class="row header">
-            <div class="col-sm-12">
+            <div class="col-sm-12 col-xs-12">
             </div>
         </div>
 
-          <div class= "row resume-link">
+          <div class= "row">
               <div class="col-sm-12">
                   <a href="Shelley_Witte_resume_May2017.pdf" style="float:right;"><strong>PDF of my resumé</strong></a>
               </div>
           </div>
 
-          <div class= "row resume-section">
+          <div class= "row">
               <h2 class="header-title">Technical Skills</h2>
               <div class="col-sm-12">
                   <h3>Cartography and GIS</h3>
@@ -66,10 +66,10 @@
               </div>
           </div>
 
-          <div class="row resume-section">
+          <div class="row">
               <h2 class="header-title">Work Experience</h2>
               <div class="col-md-12">
-                  <h4>Applied Population Lab</h4>
+                  <h4 class= "job">Applied Population Lab</h4>
                   <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Intern | <strong>October 2016 &mdash; May 2017</strong> | Madison, WI</h6>
                   <p>The Applied Population Lab conducts applied demographic research and outreach. I completed my GIS Capstone project with APL, conducting an exploratory study of Depression-era Wisconsin residential security maps. Using current demographic data, we conducted a spatial analysis of five Wisconsin cities to see if correlations exist between socioeconomic indicators and the Home Owners' and Loan Corporation neighborhood grades from the 1930s.</p>
                   <br>
