--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
                 <div class="col-md-4">
                     <div class="thumbnail portfolio-thumbnail overlay">
                         <img src="img/pregnancy_crop.png" alt="Unintended Pregnancy"/>
-                        <a href="unintended_pregnancies.html" class="description">The Costs of Unintended Pregnancies</a>
+                        <a href="unintended_pregnancies.html" class="description">The Costs of Unintended Pregnancies infographic</a>
                     </div>
                 </div>
 
@@ -79,36 +79,36 @@
 
                 <div class="col-md-4">
                     <div class="thumbnail portfolio-thumbnail overlay">
-                        <a href="maptiles.html">
-                            <img src="img/maptiles.png" alt="Walking Dead Maptiles"/></a>
+                        <img src="img/maptiles.png" alt="Walking Dead Maptiles"/>
+                        <a href="maptiles.html" class="description">The Walking Dead maptiles</a>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="thumbnail portfolio-thumbnail">
-                        <a href="bwca.html">
-                            <img src="img/bwca_crop.png" alt="Walking Dead Maptiles"/></a>
+                    <div class="thumbnail portfolio-thumbnail overlay">
+                        <img src="img/bwca_crop.png" alt="BWCA"/>
+                        <a href="bwca.html" class="description">Boundary Waters Excursion terrain map</a>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="thumbnail portfolio-thumbnail">
-                        <a href="achievementgap.html">
-                            <img src="img/achievement_crop.png" alt="Achievement Gap"/></a>
+                    <div class="thumbnail portfolio-thumbnail overlay">
+                        <img src="img/achievement_crop.png" alt="Achievement Gap"/>
+                        <a href="achievementgap.html" class="description">Science Achievement Gap interactive map</a>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="thumbnail portfolio-thumbnail">
-                        <a href="campaign_finance.html">
-                            <img src="img/campaign_crop.png" alt="Campaign Money"/></a>
+                    <div class="thumbnail portfolio-thumbnail overlay">
+                        <img src="img/campaign_crop.png" alt="Campaign Money"/>
+                        <a href="campaign_finance.html" class="description">2016 Presidential Campaign Election Money interactive map</a>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="thumbnail portfolio-thumbnail">
-                        <a href="UW_incoming.html">
-                            <img src="img/incoming_crop.png" alt="Incoming Freshmen"/></a>
+                    <div class="thumbnail portfolio-thumbnail overlay">
+                        <img src="img/incoming_crop.png" alt="Incoming Freshmen"/>
+                        <a href="UW_incoming.html" class="description">UW-Madison Incoming Freshmen flow map</a>
                     </div>
                 </div>
 
