--- a/achievementgap.html
+++ b/achievementgap.html
@@ -32,7 +32,7 @@
                     </div>
                     <div id="myNav" class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="Shelley_Witte_resume_2016.pdf" target="_blank">Resume<span class="sr-only"></span></a></li>
+                            <li><a href="resume.html">Resume</a></li>
                             <li><a class="current-page" href="work.html">Work</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
@@ -42,7 +42,6 @@
             <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </header>
-
 
         <div class="container">
             <div class="row header">
@@ -54,7 +53,9 @@
 
                 </div>
             </div>
+        </div>
 
+        <div class="container">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="thumbnail">
