--- a/campaign_finance.html
+++ b/campaign_finance.html
@@ -32,7 +32,7 @@
                     </div>
                     <div id="myNav" class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="Shelley_Witte_resume_2016.pdf" target="_blank">Resume<span class="sr-only"></span></a></li>
+                            <li><a href="resume.html">Resume</a></li>
                             <li><a class="current-page" href="work.html">Work</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
