--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       </header>
 <br>
       <div class="container";>
-          <div class="row">
+          <div class="row header">
               <div class="col-md-12">
               <!-- Generator: Adobe Illustrator 20.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -140,11 +140,8 @@
               		c-3.3,0-5.9-2.7-5.9-5.9s2.7-5.9,5.9-5.9s5.9,2.7,5.9,5.9S396.3,83.8,393,83.8z"/>
               </g>
               </svg>
-
-
           </div>
       </div>
-
-    </body>
-
+  </div>
+</body>
 </html>
