update to resume and images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       <h1>Shelley Witte</h1>
                       <h2>Cartography  |  GIS  |  Education</h2>
 
-                      <h4 style="font-family: Dosis;">Hello, I'm Shelley -- a GIS certificate student at the University of Wisconsin-Madison. I have spent the last decade educating others about the wonders of astronomy and the Earth sciences. Now I'm interested in focusing on social justice through the vehicles of GIS and cartography.</h4><br>
+                      <h4 style="font-family: Dosis;">Hello, I'm Shelley -- a GIS technician at the Wisconsin Department of Public Instruction. I have spent the last decade educating others about the wonders of astronomy and the Earth sciences. Now I'm interested in focusing on social justice through the vehicles of GIS and cartography.</h4><br>
                 </div>
             </div>
         </div>
