--- a/resume.html
+++ b/resume.html
@@ -68,10 +68,18 @@
 
           <div class="row">
               <h2 class="header-title">Work Experience</h2>
+
+              <div class="col-md-12">
+                  <h4 class= "job">Wisconsin Department of Public Instruction</h4>
+                  <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> GIS technician | <strong>June 2017 &mdash; present</strong> | Madison, WI</h6>
+                  <p>The Department of Public Instruction processes and maintains documents of official school district boundary changes. I am currently working on developing a more accurate and verified school district boundaries layer for the state of Wisconsin. </p>
+                  <br>
+              </div>
+
               <div class="col-md-12">
                   <h4 class= "job">Applied Population Lab</h4>
                   <h6><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> <img src="img/map_graphic.png" alt="Map" style="max-width:35px; height:auto"> Student Intern | <strong>October 2016 &mdash; May 2017</strong> | Madison, WI</h6>
-                  <p>The Applied Population Lab conducts applied demographic research and outreach. I completed my GIS Capstone project with APL, conducting an exploratory study of Depression-era Wisconsin residential security maps. Using current demographic data, we conducted a spatial analysis of five Wisconsin cities to see if correlations exist between socioeconomic indicators and the Home Owners' and Loan Corporation neighborhood grades from the 1930s.</p>
+                  <p>The Applied Population Lab conducts applied demographic research and outreach. I completed my <a href="https://geography.wisc.edu/gis/giscertificateprogram/about/">GIS Capstone</a> project with APL, conducting an exploratory study of Depression-era Wisconsin residential security maps. Using current demographic data, we conducted a spatial analysis of five Wisconsin cities to see if correlations exist between socioeconomic indicators and the Home Owners' and Loan Corporation neighborhood grades from the 1930s.</p>
                   <br>
               </div>
 
@@ -129,7 +137,7 @@
               <h2 class="header-title">Education</h2>
               <div class="col-md-12">
                   <h3>University of Wisconsin &mdash; Madison</h3>
-                  <h5><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"> Certificate in GIS </h5>
+                  <h5><img src="img/GIS.png" alt="GIS" style="max-width:25px; height:auto"><a href="https://geography.wisc.edu/gis/giscertificateprogram/about/"> Certificate in GIS </a> </h5>
                   <h6><strong>September 2015 &mdash; May 2017</strong></h6>
               </div>
 
