--- a/HOLC_project.html
+++ b/HOLC_project.html
@@ -42,6 +42,44 @@
             <script type="text/javascript" src="js/bootstrap.min.js"></script>
         </header>
 
+        <div class="container">
+            <div class="header">
+                <h2><strong>Madison</strong></h2>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+                <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#myCarousel" data-slide-to="1"></li>
+                      <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+
+                <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img class="d-block" src="img/Madison_bachelorsOrHigher.png" alt="Bachelors Degree">
+                        </div>
+
+                        <div class="item">
+                            <img class="d-block" src="img/Madison_HHincome_greaterThan100k.png" alt="Chicago">
+                        </div>
+
+                        <div class="item">
+                            <img class="d-block" src="img/Madison_HHincome_lessThan30k.png" alt="New york">
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
 
         <footer>
             <div class="jumbotron footer">
